name:                jfdb
version:             0.0.0.1
synopsis:            Asistente de migración de la base de datos de teatros a PostgreSQL
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Ricardo Lanziano
maintainer:          arpunk@cryptolab.net
copyright:           Ricardo Lanziano
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

executable jfdb
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base > 4 && < 5
                     , attoparsec
                     , text
                     , bytestring
                     , word8
                     , cassava
                     , vector
                     , transformers
                     , time
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , esqueleto
                     , split
                     , aeson
                     , resourcet
                     , monad-logger
                     , conduit
                     , csv-conduit

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded

test-suite jfdb-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Suite.hs
  build-depends:       base >=4 && < 5
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
